--- a/my-project/package.json
+++ b/my-project/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
+    "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.3",
+    "jsonwebtoken": "^8.5.1",
+    "mysql2": "^2.3.3",
     "next": "12.3.1",
     "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
