--- a/my-project/.env
+++ b/my-project/.env
@@ -1,6 +1,7 @@
-PRIVATE_KEY=frindpartner
-DB_USER = root
-DB_PASS = 
+PRIVATE_KEY= frindpartner
+DB_USERNAME = root
+DB_PASSWORD = 
 DB_NAME = partner
-DB_HOST = 127.0.0.1
+DB_HOSTNAME = 127.0.0.1
 DB_DIAL = mysql
+NODE_ENV= developpemt
