--- a/my-project/package.json
+++ b/my-project/package.json
@@ -3,22 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "env-cmd sequelize-cli db:migrate && next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "model:generate": "env-cmd sequelize-cli model:generate",
+    "seed": "env-cmd sequelize-cli db:seed:all",
+    "migrate": "env-cmd sequelize-cli db:migrate",
+    "migrate:rollback": "env-cmd sequelize-cli db:migrate:undo",
+    "migrate:rollback:all": "env-cmd sequelize-cli db:migrate:undo:all"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
     "bcrypt": "^5.0.1",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
+    "env-cmd": "^10.1.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "next": "12.3.1",
     "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-redux": "^8.0.4"
+    "react-redux": "^8.0.4",
+    "sequelize": "^6.23.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
