--- a/my-project/.sequelizerc
+++ b/my-project/.sequelizerc
@@ -1,6 +1,6 @@
 const path = require('path')
 module.exports = {
-  config: path.resolve('db/config', 'config.js'),
+  config: path.resolve('db/config', 'config.mjs'),
   'models-path': path.resolve('db', 'models'),
   'seeders-path': path.resolve('db', 'seeders'),
   'migrations-path': path.resolve('db', 'migrations')
