--- a/my-project/.env
+++ b/my-project/.env
@@ -1,5 +1,5 @@
 NODE_ENV= development
-APP_URL= http://localhost:3000/
+APP_URL= http://localhost:3000
 PRIVATE_KEY= frindpartner
 DB_USERNAME = root
 DB_PASSWORD = 
