--- a/my-project/.env
+++ b/my-project/.env
@@ -1,6 +1,6 @@
 NODE_ENV= development
 APP_URL= http://localhost:3000
-PRIVATE_KEY= frindpartner
+PRIVATE_KEY= findpartner
 DB_USERNAME = root
 DB_PASSWORD = 
 DB_NAME = partner
