--- a/my-project/package.json
+++ b/my-project/package.json
@@ -23,8 +23,10 @@
     "emoji-picker-react": "^4.4.3",
     "env-cmd": "^10.1.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "next": "12.3.1",
+    "next-connect": "^0.13.0",
     "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
